--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ resume_contact_telephone:       "(21) 99133-2292"
 resume_contact_address:         "Rua Ibituruna, 38 Apto. 302 - Maracanã, Rio de Janeiro"
 
 resume_header_contact_info:     "Rua Ibituruna, 38 Apto. 302 - Maracanã, Rio de Janeiro • (21) 99133-2292 • juliana.goulart@rio.rj.gov.br"
-display_header_contact_info:    "false"
+display_header_contact_info:    "true"
 
 resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
 
