Changed _config.yml & resume.html

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ resume_title:                   "Especialista em Gestão Pública Municipal"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "juliana.goulart@rio.rj.gov.br"
+resume_contact_email_academic:  "jufilhote@id.uff.br"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "(21) 99133-2292"
