Changed _config.yml & resume.html

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Currículo de Juliana Tosta Filhote Goulart"
-description: "A resume template for Jekyll and GitHub Pages sites."
+description: "Currículo Vitae de Juliana T F Goulart."
 
 # Build settings
 markdown: kramdown
