Changed various files.

--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,4 +1,5 @@
 # Associations
+# Participação em eventos e conselhos 
 # comment out the urls if you do not wish to display them
 
 - organization: PETA
