--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,4 +1,5 @@
 # Recognitions
+# Reconhecimentos
 - award: Outstanding Achievement
   organization: Springfield Young Professionals
   year: 2010, 2014
