--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,4 +1,5 @@
 # Skills
+# Habilidades
 # Organizational leadership
 - skill: Organizational leadership
   description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
