--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,15 +1,15 @@
 # Jobs
 # Experiência profissional
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
+# Prefeitura do Rio
+- company: Coordenadoria Técnica de Acesso à Informação, Secretaria Municipal da Casa Civil
+  position: Assistente I
+  duration: Dezembro/2018 &mdash; atualmente
   summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
+# SMTR
+- company: Ouvidoria da Secretaria Municipal de Transportes
+  position: Assistente I
+  duration:  Junho/2016 &mdash; Dezembro/2018
   summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
 
 
