Error on education.yml

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
 - degree: Especialização em Gestão Pública Municipal
   uni: Universidade Federal Fluminense
-  year: 2018 - 2020
+  year: 2018 &mdash; 2020
   #awards:
     - award: Summa Cumme Laude graduate
   #summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: Bacharelado em Turismo
   uni: Universidade Veiga de Almeida
-  year: 2004 - 2007
+  year: 2004 &mdash; 2007
   #award: Most likely to succeed
   #summary: You can choose to have either a single or multiple awards
