--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 # Degree
-- degree: Especialização em Gestão Pública Municipal
+  degree: Especialização em Gestão Pública Municipal
   uni: Universidade Federal Fluminense
   year: 2018 &mdash; 2020
   #awards:
-    - award: Summa Cumme Laude graduate
+    #- award: Summa Cumme Laude graduate
   #summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: Bacharelado em Turismo
