--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-  degree: Especialização em Gestão Pública Municipal
+- degree: Especialização em Gestão Pública Municipal
   uni: Universidade Federal Fluminense
   year: 2018 &mdash; 2020
   #awards:
