--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -13,7 +13,7 @@
   summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
 
 
-# Communications Coordinator
+# DREI MARC
 - company: Springfield Women & Children's Center
   position: Communications Coordinator
   duration:   Jun, 2008  &mdash; May, 2010
