--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ resume_contact_address:         "Rua Ibituruna, 38 Apto. 302 - Maracanã, Rio de
 resume_header_contact_info:     "Rua Ibituruna, 38 Apto. 302 - Maracanã, Rio de Janeiro • (21) 99133-2292 • juliana.goulart@rio.rj.gov.br"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>Especialista em Gestão Pública Municipal pela Universidade Federal Fluminense (UFF), bacharel em Turismo pela Universidade Veiga de Almeida (UVA), sou servidora pública municipal concursada da Prefeitura da Cidade do Rio de Janeiro desde junho de 2016. Primeiramente, ocupei o cargo de Assistente de Ouvidoria na Ouvidoria da Secretaria Municipal de Transportes (SMTR). Atualmente, exerço o cargo de Assistente em Transparência Ativa, da Coordenadoria Técnica de Acesso à Informação, da Subsecretaria de Integração Governamental e Transparência, da Secretaria Municipal da Casa Civil (CVL).</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -41,7 +41,7 @@ resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
 resume_section_associations:    true
-# resume_section_interests:       true
+resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
