--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,7 @@
   year: 2018 &mdash; 2020
   #awards:
     #- award: Summa Cumme Laude graduate
-  #summary: If you had any meaningful roles at college, feel free to write about them here
+  summary: "Trabalho de Conclusão de Curso: Indicadores de Efetividade da Lei de Acesso à Informação no Município do Rio de Janeiro &mdash; defendido em 13 de julho de 2020."
 
 - degree: Bacharelado em Turismo
   uni: Universidade Veiga de Almeida
