--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,7 @@
 # Interests
 # Interesses
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Transparência e controle social
+- description: Música (sou amadora)
+- description: Línguas e Linguística
+- description: Linguagens de programação
+- description: Literatura
