--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,17 +4,17 @@
 - company: Coordenadoria Técnica de Acesso à Informação, Secretaria Municipal da Casa Civil
   position: Assistente I
   duration: Dezembro/2018 &mdash; atualmente
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+  summary: Exerço minhas atividades primordialmente na área de Transparência Ativa.	<ul class="resume-item-list"><li>Desenvolvimento e manutenção do Portal de Transparência Rio;</li><li>Atendimento das demandas de Acesso à Informação;</li><li>Encaminhamento destas demandas às Ouvidorias das secretarias responsáveis;</li><li>Acompanhamento dos prazos de atendimento;</li><li>Instrução e elaboração de despachos de processos;</li><li>Preparo e redação de relatórios semanais de acompanhamento.</li></ul>
 
 # SMTR
 - company: Ouvidoria da Secretaria Municipal de Transportes
-  position: Assistente I
+  position: Assistente de Ouvidoria I
   duration:  Junho/2016 &mdash; Dezembro/2018
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+  summary: <ul class="resume-item-list"><li>Atendimento presencial ao cidadão carioca;</li><li>Encaminhamento destas demandas às Ouvidorias das secretarias responsáveis;</li><li>Encaminhamento dos chamados efetuados aos setores responsáveis;</li><li>Encaminhamento de solicitações de Acesso à Informação aos setores competentes;</li><li>Interlocução com todos os setores da SMTR;</li><li>Instrução e elaboração de despachos de processos;</li><li>Preparo e redação de relatórios e planos de trabalho.</li></ul>
 
 
 # DREI MARC
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+#- company: Springfield Women & Children's Center
+  #position: Communications Coordinator
+  #duration:   Jun, 2008  &mdash; May, 2010
+  #summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
