--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,16 +2,10 @@
 # Projetos
 # uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
-  # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+# transparencia.rio
+- project: Portal da Transparência Rio
+  role: Desenvolvimento & manutenção
+  duration: 2019 &mdash; atualmente
+  url: "http://transparencia.rio"
+  description: O Portal da Transparência Rio garante acesso às informações públicas da Prefeitura da Cidade do Rio de Janeiro, o principal instrumento para garantir o direito de acesso à informação e estimular o controle social da sociedade.
 
-# Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
-  # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
