--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,8 +4,8 @@
 
 # transparencia.rio
 - project: Portal da Transparência Rio
-  role: Desenvolvimento & manutenção
+  role: Desenvolvimento Web
   duration: 2019 &mdash; atualmente
   url: "http://transparencia.rio"
-  description: O Portal da Transparência Rio garante acesso às informações públicas da Prefeitura da Cidade do Rio de Janeiro, o principal instrumento para garantir o direito de acesso à informação e estimular o controle social da sociedade.
+  description: Participei da reformulação do Portal, juntamente com a equipe da Subsecretaria de Comunicação Governamental, e atualmente sou responsável pelo desenvolvimento web <i>front-end</i>.<br><br>O Portal da Transparência Rio garante acesso às informações públicas da Prefeitura da Cidade do Rio de Janeiro, assim estimulando o controle social exercido pela sociedade.
 
