--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,13 +1,13 @@
 # Skills
-# Cursos extracurriculares
+# Habilidades
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Inglês
+  description: Fluência na fala, leitura e na escrita. Curso completo de Inglês no IBEU • 1998 &mdash; 2003.
 
 # Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+- skill: Alemão
+  description: Nível básico. Curso de Alemão no Goethe-Institut • 2005 &mdash; 2008.
 
 # Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+- skill: Francês
+  description: Nível intermediário. Curso de Francês no SENAC-RJ • 2010 &mdash; 2012.
