--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ resume_contact_address:         "Rua Ibituruna, 38 Apto. 302 - Maracanã, Rio de
 resume_header_contact_info:     "Rua Ibituruna, 38 Apto. 302 - Maracanã, Rio de Janeiro • (21) 99133-2292 • juliana.goulart@rio.rj.gov.br"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Especialista em Gestão Pública Municipal pela Universidade Federal Fluminense (UFF), bacharel em Turismo pela Universidade Veiga de Almeida (UVA), sou servidora pública municipal concursada da Prefeitura da Cidade do Rio de Janeiro desde junho de 2016. Primeiramente, ocupei o cargo de Assistente de Ouvidoria na Ouvidoria da Secretaria Municipal de Transportes (SMTR). Atualmente, exerço o cargo de Assistente em Transparência Ativa, da Coordenadoria Técnica de Acesso à Informação, da Subsecretaria de Integração Governamental e Transparência, da Secretaria Municipal da Casa Civil (CVL).</p>"
+resume_header_intro: "<p>Especialista em Gestão Pública Municipal pela Universidade Federal Fluminense, bacharel em Turismo pela Universidade Veiga de Almeida, servidora pública municipal concursada da Prefeitura da Cidade do Rio de Janeiro desde junho de 2016. Primeiramente, ocupei o cargo de Assistente de Ouvidoria na Ouvidoria da Secretaria Municipal de Transportes. Atualmente, exerço o cargo de Assistente em Transparência Ativa, da Coordenadoria Técnica de Acesso à Informação, da Subsecretaria de Integração Governamental e Transparência, da Secretaria Municipal da Casa Civil.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -37,7 +37,7 @@ resume_looking_for_work:        "yes"
 resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
-resume_section_skills:          false
+resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           false
 resume_section_associations:    true
