Atualizei lista dos cursos extracurriculares

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -11,7 +11,7 @@
 - award: Certificação em Ouvidoria (120h)
   organization: Escola Nacional de Administração Pública (ENAP)
   year: Junho/2017 &mdash; Outubro/2017
-  summary: Acesso à Informação Controle Social; Ética e Serviço Público; Gestão em Ouvidoria; Introdução à Gestão de Processos; Resolução de Conflitos Aplicada ao Contexto das Ouvidorias.
+  summary: Acesso à Informação; Controle Social; Ética e Serviço Público; Gestão em Ouvidoria; Introdução à Gestão de Processos; Resolução de Conflitos Aplicada ao Contexto das Ouvidorias.
 
 - award: Regulamentação da LAI nos Municípios (20h)
   organization: ENAP
