✨ Introduced Linkedin link.

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ resume_social_links:
   # resume_telegram_url:          "https://t.me/jugoul"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  # resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  resume_linkedin_url:          "https://www.linkedin.com/in/julianatfg"
   resume_instagram_url:         "http://instagram.com/sublondon"
   # resume_website_url:           "http://joelglovier.com"
   # resume_medium_url:            "https://medium.com/@jglovier"
