💫 addin' bits & pieces

--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -2,6 +2,10 @@
 # Participação em eventos e conselhos 
 # comment out the urls if you do not wish to display them
 
+- organization: Semana de Inovação 2020 - (Re)imaginar e construir futuros
+  role: Escola Nacional de Administração Pública
+  year: Novembro/2020
+
 - organization: Seminário Ouvidoria 3.0 - Construindo o Futuro
   role: Ministério da Transparência e Controladoria-Geral da União
   year: Março/2018
