--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,16 +1,11 @@
 # Recognitions
 # Reconhecimentos
-- award: JavaScript Algorithms and Data Structures Certification (300h)
-  organization: freeCodeCamp.org
-  year: Julho/2020 &mdash; atualmente
-  summary: Basic JavaScript; ES6; Regular Expressions; Debugging; Basic Data Structures; Basic Algorithm Scripting; Object Oriented Programming; Functional Programming; Intermediate Algorithm Scripting.
-
 - award: Responsive Web Design Certification (300h)
   organization: freeCodeCamp.org
   year: Junho/2020 &mdash; Julho/2020
   summary: Basic HTML and HTML5; Basic CSS; Applied Visual Design; Applied Accessibility; Responsive Web Design Principles; CSS Flexbox; CSS Grid.
 
-- award: Curso de Transparência Pública
+- award: Curso de Transparência Pública (14h)
   organization: Controladoria Regional da União &mdash; Rio de Janeiro
   year: Novembro/2019
 
@@ -35,3 +30,7 @@
 - award: Dados Abertos (20h)
   organization: ENAP
   year: Fevereiro/2019
+
+- award: Formação de Pregoeiros (20h)
+  organization: ENAP
+  year: Dezembro/2018
