🚀 revampin' my CV

--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -6,6 +6,11 @@
   role: Escola Nacional de Administração Pública
   year: Novembro/2020
 
+- organization: Grupo de Trabalho - Padronização de sites
+  role: Representante da Subsecretaria de Integração Governamental e Transparência
+  year: Junho/2019 &mdash; Novembro/2019
+  summary: Este grupo de trabalho, criado junto ao Comitê Central de Integridade (CCI) do Sistema de Integridade Pública Responsável e Transparente pela Deliberação CCI nº 04/2019, teve como objetivo aprofundar estudos e realizar proposições para a padronização de conteúdo dos sites dos órgãos e entidades que compõem a municipalidade.
+
 - organization: Seminário Ouvidoria 3.0 - Construindo o Futuro
   role: Ministério da Transparência e Controladoria-Geral da União
   year: Março/2018
@@ -16,5 +21,5 @@
 - organization: Conselho Municipal Antidrogas
   role: Conselheira Titular
   year: 2018 &mdash; 2020
-  #url: http://campuspress.yale.edu/amnesty/
+  #url: http://
   #summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
