--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,5 +1,15 @@
 # Recognitions
 # Reconhecimentos
+- award: Transformação Digital - Fundamentos (153h)
+  url: https://www.escolavirtual.gov.br/programa/18
+  organization: Escola Nacional de Administração Pública (ENAP)
+  year: Dezembro/2020 &mdash; atualmente
+  summary: Ágil no Contexto do Serviço Público; Defesa do Usuário e Simplificação; Gestão Pessoal - Base da Liderança; Governança de Dados; Portal Gov.br; Primeiros Passos para Uso de Linguagem Simples; Proteção de Dados Pessoais no Setor Público.
+
+- award: Curso de capacitação no Sistema de Processo Eletrônico - Processo.rio (20h)
+  organization: Prefeitura da Cidade do Rio de Janeiro
+  year: Dezembro/2020
+ 
 - award: Responsive Web Design Certification (300h)
   organization: freeCodeCamp.org
   year: Junho/2020 &mdash; Julho/2020
@@ -10,6 +20,7 @@
   year: Novembro/2019
 
 - award: Certificação em Ouvidoria (120h)
+  url: https://www.escolavirtual.gov.br/programa/2
   organization: Escola Nacional de Administração Pública (ENAP)
   year: Junho/2017 &mdash; Outubro/2017
   summary: Acesso à Informação; Controle Social; Ética e Serviço Público; Gestão em Ouvidoria; Introdução à Gestão de Processos; Resolução de Conflitos Aplicada ao Contexto das Ouvidorias.
