--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -6,7 +6,7 @@
   year: Dezembro/2020 &mdash; atualmente
   summary: Ágil no Contexto do Serviço Público; Defesa do Usuário e Simplificação; Gestão Pessoal - Base da Liderança; Governança de Dados; Portal Gov.br; Primeiros Passos para Uso de Linguagem Simples; Proteção de Dados Pessoais no Setor Público.
 
-- award: Curso de capacitação no Sistema de Processo Eletrônico - Processo.rio (20h)
+- award: Curso de capacitação no Processo.rio (20h)
   organization: Prefeitura da Cidade do Rio de Janeiro
   year: Dezembro/2020
  
