--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,13 +1,13 @@
 # Jobs
 # Experiência profissional
 # Prefeitura do Rio
-- company: Coordenadoria Técnica de Acesso à Informação da Secretaria Municipal da Casa Civil
+- company: Coordenadoria Técnica de Acesso à Informação &ndash; Secretaria Municipal da Casa Civil
   position: Assistente I
   duration: Janeiro/2019 &mdash; atualmente
   summary: Exerço minhas atividades primordialmente na área de Transparência Ativa.	<ul class="resume-item-list"><li>Desenvolvimento e manutenção do Portal de Transparência Rio;</li><li>Atendimento das demandas de Acesso à Informação;</li><li>Encaminhamento destas demandas às Ouvidorias das secretarias responsáveis;</li><li>Acompanhamento dos prazos de atendimento;</li><li>Instrução e elaboração de despachos de processos;</li><li>Preparo e redação de relatórios semanais de acompanhamento.</li></ul>
 
 # SMTR
-- company: Ouvidoria Especializada da Secretaria Municipal de Transportes
+- company: Ouvidoria Especializada &ndash; Secretaria Municipal de Transportes
   position: Assistente de Ouvidoria I
   duration:  Junho/2016 &mdash; Dezembro/2018
   summary: <ul class="resume-item-list"><li>Atendimento presencial ao cidadão carioca;</li><li>Encaminhamento destas demandas às Ouvidorias das secretarias responsáveis;</li><li>Encaminhamento dos chamados efetuados aos setores responsáveis;</li><li>Encaminhamento de solicitações de Acesso à Informação aos setores competentes;</li><li>Interlocução com todos os setores da SMTR;</li><li>Instrução e elaboração de despachos de processos;</li><li>Preparo e redação de relatórios e planos de trabalho.</li></ul>
