--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
   description: Participei da reformulação do Portal, juntamente com a equipe da Subsecretaria de Comunicação Governamental, e atualmente sou responsável pelo desenvolvimento web <i>front-end</i>.<br><br>O Portal da Transparência Rio garante acesso às informações públicas da Prefeitura da Cidade do Rio de Janeiro, assim estimulando o controle social exercido pela sociedade.
 
 # curso ead
-- project: Curso de capacitação em Transparência Municipal e Acesso à Informação
+- project: Curso de capacitação em Transparência Municipal
   role: Elaboração de material
   duration: Novembro/2020 &mdash; Dezembro/2020
   url: "http://eadsegs.rio.rj.gov.br/"
