✨ mudança em nomes de setores (novo prefeito, innit)

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 # Experiência profissional
 # Prefeitura do Rio
-- company: Coordenadoria Técnica de Acesso à Informação &ndash; Secretaria Municipal da Casa Civil
+- company: Coordenadoria Técnica de Transparência &ndash; Secretaria Municipal de Governo e Integridade Pública
   position: Assistente I
   duration: Janeiro/2019 &mdash; atualmente
   summary: Exerço minhas atividades primordialmente na área de Transparência Ativa.	<ul class="resume-item-list"><li>Desenvolvimento e manutenção do Portal de Transparência Rio;</li><li>Atendimento das demandas de Acesso à Informação;</li><li>Encaminhamento destas demandas às Ouvidorias das secretarias responsáveis;</li><li>Acompanhamento dos prazos de atendimento;</li><li>Instrução e elaboração de despachos de processos;</li><li>Preparo e redação de relatórios semanais de acompanhamento.</li></ul>
