--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ resume_contact_address:         ""
 resume_header_contact_info:     "(21) 99133-2292 • juliana.goulart@rio.rj.gov.br"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Especialista em Gestão Pública Municipal pela Universidade Federal Fluminense, bacharel em Turismo pela Universidade Veiga de Almeida, servidora pública municipal concursada da Prefeitura da Cidade do Rio de Janeiro desde junho de 2016. Primeiramente, ocupei o cargo de Assistente de Ouvidoria na Ouvidoria da Secretaria Municipal de Transportes. Atualmente, exerço o cargo de Assistente em Transparência Ativa, da Coordenadoria Técnica de Acesso à Informação, da Subsecretaria de Integração Governamental e Transparência, da Secretaria Municipal da Casa Civil.</p>"
+resume_header_intro: "<p>Especialista em Gestão Pública Municipal pela Universidade Federal Fluminense, bacharel em Turismo pela Universidade Veiga de Almeida, servidora pública municipal concursada da Prefeitura da Cidade do Rio de Janeiro desde junho de 2016. Primeiramente, ocupei o cargo de Assistente de Ouvidoria na Ouvidoria da Secretaria Municipal de Transportes. Atualmente, exerço o cargo de Assistente na Coordenadoria Técnica de Transparência, da Subsecretaria de Transparência e Governo Digital, da Secretaria Municipal de Governo e Integridade Pública.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
